Bug 42568 - [G33 SNA] Moving windows sometimes leaves artifacts on screen
Summary: [G33 SNA] Moving windows sometimes leaves artifacts on screen
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: x86 (IA32) Linux (All)
: medium minor
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-03 13:51 UTC by Matti Hämäläinen
Modified: 2011-11-03 17:31 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Screenshot demonstrating the problem (whiteish lines left from minimizing a window) (684.85 KB, image/png)
2011-11-03 13:51 UTC, Matti Hämäläinen
no flags Details

Description Matti Hämäläinen 2011-11-03 13:51:54 UTC
Created attachment 53127 [details]
Screenshot demonstrating the problem (whiteish lines left from minimizing a window)

Moving (or resizing etc) windows while using WindowMaker 0.92 sometimes leaves drawing artifacts which eventually go away if the screen area needs to be redrawn. These artifacts only started appearing recently with some change in the driver, but unfortunately I do not have time to bisect this problem at the moment.

Also, the artifacts only appear with SNA enabled, UXA is not affected.

-- Window manager: WindowMaker 0.92 (obviously not using composition or such)
-- chipset: 00:02.0 VGA compatible controller: Intel Corporation 82G33/G31 Express Integrated Graphics Controller (rev 10)
-- system architecture: i686
-- xf86-video-intel: GIT fa0fefd638d148d48760c95fe05520cddd96e5a4
-- xserver/mesa/etc: latest in Debian Testing: X.Org X Server 1.11.1.901 (1.11.2 RC 1)
-- libdrm version: 2.6.26
-- kernel version: 2.6.39.4 and 3.0.8 (present in both)
-- Linux distribution: Debian Testing aka Wheezy
-- Machine or mobo model: Asus P5KPL-CM
-- Display connector: VGA
Comment 1 Chris Wilson 2011-11-03 13:57:44 UTC
Any window?

/me starts installing WindowMaker
Comment 2 Chris Wilson 2011-11-03 14:15:04 UTC
Ok, I can reproduce this.
Comment 3 Chris Wilson 2011-11-03 14:53:01 UTC
The winner appears to be:

commit 40af32a0e9ed971a1f2c2a45266f32016bda7ed3
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Fri Oct 21 20:10:02 2011 +0100

    sna: Execute blits directly for PolyRectangle
    
    By constructing the batch buffer directly for PolyRectangle, rather than
    via miPolyRectangle->(PolyFillRectangle/PolyLine), we dramatically
    reduce the CPU overhead and can saturate the GPU.
    
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 4 Matti Hämäläinen 2011-11-03 14:58:25 UTC
Cool. I didn't expect a reply and the culprit being found this fast. :)
Comment 5 Chris Wilson 2011-11-03 15:52:29 UTC
commit 5b21838471651a59d3e425c05a389c3f9196e21d
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Thu Nov 3 22:51:24 2011 +0000

    sna: Compute the correct extents for the PolyRectangle
    
    Otherwise we may leave one behind...
    
    A regression from the introduction of sna_poly_rectangles:
    40af32a0e9ed971a1f2c2a45266f32016bda7ed3 (sna: Execute blits directly
    for PolyRectangle)
    
    Reported-by: Matti Hamalainen <ccr@tnsp.org>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=42568
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 6 Matti Hämäläinen 2011-11-03 17:31:16 UTC
Thanks for the quick fix!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.