sna: Compute the correct extents for the PolyRectangle

Otherwise we may leave one behind...

A regression from the introduction of sna_poly_rectangles:
40af32a0e9ed971a1f2c2a45266f32016bda7ed3 (sna: Execute blits directly
for PolyRectangle)

Reported-by: Matti Hamalainen <ccr@tnsp.org>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=42568
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>